--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   .menu-btn span {
     height: 3px;
     width: 25px;
-    background-color: #e0c3fc; /* Cor roxa desejada para o ícone */
+    background-color: #e0c3fc;
     margin: 4px 0;
     border-radius: 5px;
     transition: 0.3s;
